--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2613,6 +2613,10 @@
   margin-bottom: 10%;
 }
 
+.blocco div.is-inview figure .scale__img {
+  scale: (1.02);
+}
+
 @media screen and (max-width: 1440px) {
   .certvault .module--header__bg {
     right: 41%;
