--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6983,6 +6983,9 @@ header {
 .mg__bottom {
   margin-bottom: 10%;
 }
+.blocco div.is-inview figure .scale__img {
+  scale: 1.02;
+}
 @media screen and (max-width: 1440px) {
   .certvault .module--header__bg {
     right: 41%;
