--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5687,3 +5687,139 @@
     }
   }
 }
+
+// GCM Sakib
+.font__pad {
+  padding: 0 120px;
+}
+
+.mg__btm {
+  margin-bottom: 0 !important;
+}
+
+.gcm .module--header__bg {
+  top: 24%;
+  right: 32%;
+  width: 15%;
+  height: auto;
+}
+
+.gcm__boxes {
+  width: 90%;
+  margin: 0 auto;
+  padding: 5% 0 10% 0;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.gcm__boxes .box {
+  width: 260px;
+  height: 150px;
+  padding: 10px 20px;
+  font-size: 20px;
+  color: #fff;
+  text-align: right;
+  font-family: sans-serif;
+  box-shadow: 5px 8px 20px #afafaf47;
+}
+
+@media screen and (max-width: 1536px) {
+  .gcm .module--header__bg {
+    top: 20%;
+    right: 27%;
+  }
+  .gcm__boxes .box {
+    width: 210px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .gcm .module--header__bg {
+    top: 22%;
+    right: 26%;
+  }
+  .gcm__boxes .box {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .gcm .module--header__bg {
+    top: 18%;
+    right: 23%;
+  }
+  .gcm__boxes {
+    justify-content: space-between !important;
+  }
+  .gcm__boxes .box {
+    width: 220px;
+    margin-bottom: 15px;
+  }
+  .font__pad {
+    padding: 0 80px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .gcm__boxes {
+    justify-content: start !important;
+    gap: 10px;
+  }
+  .gcm__boxes .box {
+    margin-bottom: 0;
+  }
+  .gcm .module--header__bg {
+    top: 19%;
+    right: 15%;
+  }
+  .font__pad {
+    padding: 0 55px;
+  }
+  .typo__font {
+    font-size: 42px !important;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .gcm .module--header__bg {
+    display: none;
+  }
+  .patra .hro-img {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    height: 600px;
+  }
+  .font__pad {
+    margin-top: 40px;
+  }
+  .pad__ing {
+    padding: 100px 0 !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .gcm .hro-img {
+    position: absolute !important;
+    top: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    left: 50% !important;
+    height: 500px !important;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .gcm .hro-img {
+    height: 300px !important;
+  }
+  .gcm__boxes {
+    justify-content: center !important;
+  }
+  .font__pad {
+    padding: 0 10px;
+  }
+  .gcm__boxes .box {
+    width: 180px;
+  }
+}
