--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9539,37 +9539,20 @@ header {
   width: 15%;
   height: auto;
 }
-.gcm__boxes {
-  width: 90%;
-  margin: 0 auto;
-  padding: 5% 0 10% 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.gcm__height {
+  min-height: calc(var(--vh, 1vh) * 55) !important;
 }
-.gcm__boxes .box {
-  width: 260px;
-  height: 150px;
-  padding: 10px 20px;
-  font-size: 20px;
-  color: #fff;
-  text-align: right;
-  font-family: sans-serif;
-  -webkit-box-shadow: 5px 8px 20px #afafaf47;
-          box-shadow: 5px 8px 20px #afafaf47;
+#colori .grid__col {
+  -ms-grid-column: 3;
+      grid-column-start: 3;
+}
+#colori ul li > div .pd_top {
+  padding-top: 30px;
 }
 @media screen and (max-width: 1536px) {
   .gcm .module--header__bg {
     top: 20%;
     right: 27%;
-  }
-  .gcm__boxes .box {
-    width: 210px;
   }
 }
 @media screen and (max-width: 1440px) {
@@ -9577,8 +9560,8 @@ header {
     top: 22%;
     right: 26%;
   }
-  .gcm__boxes .box {
-    width: 200px;
+  .patra .gcm__position {
+    left: 20%;
   }
 }
 @media screen and (max-width: 1280px) {
@@ -9586,29 +9569,11 @@ header {
     top: 18%;
     right: 23%;
   }
-  .gcm__boxes {
-    -webkit-box-pack: justify !important;
-        -ms-flex-pack: justify !important;
-            justify-content: space-between !important;
-  }
-  .gcm__boxes .box {
-    width: 220px;
-    margin-bottom: 15px;
-  }
   .font__pad {
     padding: 0 80px;
   }
 }
 @media screen and (max-width: 1024px) {
-  .gcm__boxes {
-    -webkit-box-pack: start !important;
-        -ms-flex-pack: start !important;
-            justify-content: start !important;
-    gap: 10px;
-  }
-  .gcm__boxes .box {
-    margin-bottom: 0;
-  }
   .gcm .module--header__bg {
     top: 19%;
     right: 15%;
@@ -9652,16 +9617,8 @@ header {
   .gcm .hro-img {
     height: 300px !important;
   }
-  .gcm__boxes {
-    -webkit-box-pack: center !important;
-        -ms-flex-pack: center !important;
-            justify-content: center !important;
-  }
   .font__pad {
     padding: 0 10px;
-  }
-  .gcm__boxes .box {
-    width: 180px;
   }
 }
 :root {
