--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5814,20 +5814,47 @@
 }
 
 .wragby__typo {
+  display: none;
   width: 50% !important;
   padding-left: 120px;
+}
+
+.wragby__typo-2 {
+  width: 90% !important;
+  padding-left: 120px;
+}
+
+.phone__img {
+  display: none;
 }
 
 .wragby__mp {
   margin-top: 10%;
 }
 
+#colorc .wrag__color__section {
+  width: 80%;
+}
+
 .gcm__color {
-  padding: 0 50px;
+  width: 80%;
+  padding-left: 120px;
 }
 
 #colorc .wrag__phn {
   width: 40%;
+}
+
+.image-section .wrag__image {
+  margin-bottom: 10%;
+}
+
+.wrag__pt {
+  padding: 0 0 100px 0px;
+}
+
+.wrag__color {
+  min-height: calc(var(--vh, 1vh) * 35) !important;
 }
 
 @media screen and (max-width: 1024px) {
@@ -5866,6 +5893,15 @@
 }
 
 @media screen and (max-width: 475px) {
+  .wragby__typo {
+    display: block;
+  }
+  .wragby__typo-2 {
+    display: none;
+  }
+  .phone__img {
+    display: block;
+  }
   .gcm__color {
     padding: 0px;
     width: 300px;
@@ -5882,9 +5918,6 @@
   #colorc .wrag__phn {
     margin: 0 auto;
   }
-  // .phone__img {
-  //   padding: 80px;
-  // }
   .wrag__pt {
     padding: 0 0 75px 0 !important;
   }
@@ -5893,6 +5926,12 @@
   }
   .wrag__module {
     padding: 35% 0 !important;
+  }
+  .blocco div.left_block .wrag__mockup {
+    transform: scale(1.5);
+  }
+  .mockup__pt {
+    margin-top: 100px;
   }
 }
 
