--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5905,7 +5905,7 @@
   .gcm__color {
     padding: 0px;
     width: 300px;
-    margin-top: 30px;
+    margin-top: 50px;
   }
   .wragby__typo {
     width: 100% !important;
@@ -5917,6 +5917,7 @@
   }
   #colorc .wrag__phn {
     margin: 0 auto;
+    padding-top: 70px;
   }
   .wrag__pt {
     padding: 0 0 75px 0 !important;
