--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5857,6 +5857,17 @@
   min-height: calc(var(--vh, 1vh) * 35) !important;
 }
 
+.wrag__bg {
+  background-size: cover;
+  height: 99vh;
+}
+
+.wrag__bg .wrag__line__img {
+  width: 100%;
+  height: 99vh;
+  position: relative;
+}
+
 @media screen and (max-width: 1024px) {
   .wragby .module--header__bg {
     top: 18.8%;
