--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5857,15 +5857,63 @@
   min-height: calc(var(--vh, 1vh) * 35) !important;
 }
 
+.cont__bg__section {
+  color: #fff;
+  font-family: "NeueHaasDisplay-me";
+  letter-spacing: 1px;
+}
+
+.cont__bg__section .grid__text {
+  padding: 150px 0 0 80px;
+  font-size: 4rem;
+}
+
 .wrag__bg {
-  background-size: cover;
-  height: 99vh;
+  width: 100%;
+  height: 95vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+.content__section {
+  width: 60%;
+  padding-left: 90px;
+  color: #fff;
+  font-family: "NeueHaasDisplay-light";
+  letter-spacing: 1px;
+}
+
+.content__section .pt__top {
+  padding-top: 40px;
+}
+
+.content__section .grid__col__text {
+  font-size: 6rem;
+  font-family: "NeueHaasDisplay-light";
+}
+
+.content__section .p1 {
+  padding-top: 30px;
+  font-size: 32px;
+}
+
+.content__section .p2 {
+  padding-top: 30px;
+  font-size: 32px;
+}
+
+.image__section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrag__bg .wrag__line__img {
   width: 100%;
-  height: 99vh;
-  position: relative;
+  height: auto;
 }
 
 @media screen and (max-width: 1024px) {
