--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5927,6 +5927,15 @@
   .wragby .el6 {
     bottom: 17%;
   }
+  .content__section .grid__col__text {
+    font-size: 4rem;
+  }
+  .content__section .p1 {
+    font-size: 25px;
+  }
+  .content__section .p2 {
+    font-size: 25px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -5948,6 +5957,16 @@
   }
   .wrag__pt {
     padding: 0px 0 30px 0 !important;
+  }
+  .wrag__bg {
+    width: 100%;
+    height: auto;
+    flex-direction: column-reverse;
+  }
+  .content__section {
+    width: 100%;
+    padding-left: 50px;
+    margin-bottom: 50px;
   }
 }
 
@@ -5992,6 +6011,21 @@
   }
   .mockup__pt {
     margin-top: 100px;
+  }
+  .cont__bg__section .grid__text {
+    padding: 0;
+    font-size: 3rem;
+    text-align: center;
+    padding-top: 70px;
+  }
+  .content__section {
+    width: 100%;
+    padding-left: 0px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  .content__section .pt__top {
+    padding: 40px 15px 0 15px;
   }
 }
 
