--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9757,6 +9757,15 @@ header {
   .wragby .el6 {
     bottom: 17%;
   }
+  .content__section .grid__col__text {
+    font-size: 4rem;
+  }
+  .content__section .p1 {
+    font-size: 25px;
+  }
+  .content__section .p2 {
+    font-size: 25px;
+  }
 }
 @media screen and (max-width: 768px) {
   .wragby__typo {
@@ -9778,6 +9787,19 @@ header {
   }
   .wrag__pt {
     padding: 0px 0 30px 0 !important;
+  }
+  .wrag__bg {
+    width: 100%;
+    height: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .content__section {
+    width: 100%;
+    padding-left: 50px;
+    margin-bottom: 50px;
   }
 }
 @media screen and (max-width: 475px) {
@@ -9821,6 +9843,21 @@ header {
   }
   .mockup__pt {
     margin-top: 100px;
+  }
+  .cont__bg__section .grid__text {
+    padding: 0;
+    font-size: 3rem;
+    text-align: center;
+    padding-top: 70px;
+  }
+  .content__section {
+    width: 100%;
+    padding-left: 0px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  .content__section .pt__top {
+    padding: 40px 15px 0 15px;
   }
 }
 @media screen and (max-width: 375px) {
