--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5870,7 +5870,7 @@
 
 .wrag__bg {
   width: 100%;
-  height: 95vh;
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6022,7 +6022,7 @@
     width: 100%;
     padding-left: 0px;
     margin-bottom: 50px;
-    text-align: center;
+    text-align: left;
   }
   .content__section .pt__top {
     padding: 40px 15px 0 15px;
