--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9693,7 +9693,7 @@ header {
 }
 .wrag__bg {
   width: 100%;
-  height: 95vh;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9854,7 +9854,7 @@ header {
     width: 100%;
     padding-left: 0px;
     margin-bottom: 50px;
-    text-align: center;
+    text-align: left;
   }
   .content__section .pt__top {
     padding: 40px 15px 0 15px;
