--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9847,17 +9847,17 @@ header {
   .cont__bg__section .grid__text {
     padding: 0;
     font-size: 3rem;
-    text-align: center;
+    padding-left: 20px;
     padding-top: 70px;
   }
   .content__section {
     width: 100%;
-    padding-left: 0px;
-    margin-bottom: 50px;
+    padding-left: 20px;
+    margin-bottom: 40px;
     text-align: left;
   }
   .content__section .pt__top {
-    padding: 40px 15px 0 15px;
+    padding-top: 40px;
   }
 }
 @media screen and (max-width: 375px) {
