--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5809,6 +5809,9 @@
 }
 
 // Wragby
+.wragby .hro-img {
+  z-index: 999;
+}
 .pd__bot {
   margin-bottom: 10%;
 }
@@ -5829,7 +5832,7 @@
 }
 
 .wragby__mp {
-  margin-top: 10%;
+  margin-top: 0%;
   padding: 10% 0 0 0;
 }
 
@@ -5838,7 +5841,7 @@
 }
 
 .gcm__color {
-  width: 80%;
+  width: 100%;
   padding-left: 120px;
 }
 
@@ -5851,7 +5854,7 @@
 }
 
 .wrag__pt {
-  padding: 0 0 100px 0px;
+  padding: 100px 0 0 0px !important;
 }
 
 .wrag__color {
