--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5920,6 +5920,10 @@
   height: auto;
 }
 
+.blocco div.wrag__typo {
+  margin-bottom: 2%;
+}
+
 @media screen and (max-width: 1024px) {
   .wragby .module--header__bg {
     top: 18.8%;
