--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9750,6 +9750,9 @@ header {
   width: 100%;
   height: auto;
 }
+.blocco div.wrag__typo {
+  margin-bottom: 2%;
+}
 @media screen and (max-width: 1024px) {
   .wragby .module--header__bg {
     top: 18.8%;
