--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9681,7 +9681,7 @@ header {
   margin-bottom: 10%;
 }
 .wrag__pt {
-  padding: 100px 0 0 0px !important;
+  padding: 100px 0 50px 0px !important;
 }
 .wrag__color {
   min-height: calc(var(--vh, 1vh) * 35) !important;
@@ -9876,7 +9876,7 @@ header {
     padding: 0 30px;
   }
   .wrag__pt {
-    padding: 0 0 75px 0 !important;
+    padding: 0 0 50px 0 !important;
   }
 }
 :root {
