--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5854,7 +5854,7 @@
 }
 
 .wrag__pt {
-  padding: 100px 0 0 0px !important;
+  padding: 100px 0 50px 0px !important;
 }
 
 .wrag__color {
@@ -6046,6 +6046,6 @@
     padding: 0 30px;
   }
   .wrag__pt {
-    padding: 0 0 75px 0 !important;
+    padding: 0 0 50px 0 !important;
   }
 }
