--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5833,7 +5833,7 @@
 
 .wragby__mp {
   margin-top: 0%;
-  padding: 10% 0 0 0;
+  padding: 10% 0 5% 0;
 }
 
 #colorc .wrag__color__section {
@@ -6012,7 +6012,7 @@
     width: 100%;
   }
   .wrag__module {
-    padding: 35% 0 !important;
+    padding: 20% 0 !important;
   }
   .blocco div.left_block .wrag__mockup {
     transform: scale(1.5);
