--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5850,7 +5850,7 @@
 }
 
 .image-section .wrag__image {
-  margin-bottom: 10%;
+  margin-bottom: 0%;
 }
 
 .wrag__pt {
@@ -5870,6 +5870,10 @@
 .cont__bg__section .grid__text {
   padding: 150px 0 0 80px;
   font-size: 4rem;
+}
+
+.image-section .last__img {
+  margin-bottom: 0% !important;
 }
 
 .wrag__bg {
