--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9813,6 +9813,10 @@ header {
   }
 }
 @media screen and (max-width: 475px) {
+  #colorc .wrag__color__section {
+    width: 100%;
+    padding-left: 20px;
+  }
   .wragby__typo {
     display: block;
   }
@@ -9824,7 +9828,6 @@ header {
   }
   .gcm__color {
     padding: 0px;
-    width: 300px;
     margin-top: 50px;
   }
   .wragby__typo {
