--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5983,6 +5983,10 @@
 }
 
 @media screen and (max-width: 475px) {
+  #colorc .wrag__color__section {
+    width: 100%;
+    padding-left: 20px;
+  }
   .wragby__typo {
     display: block;
   }
@@ -5994,7 +5998,6 @@
   }
   .gcm__color {
     padding: 0px;
-    width: 300px;
     margin-top: 50px;
   }
   .wragby__typo {
