--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -6086,6 +6086,12 @@
   .wrag__image__section {
     padding: 10% 10% 5% 10%;
   }
+  .margin-r-30 {
+    margin-right: 0%;
+  }
+  .wrag__bg {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 375px) {
