--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9915,6 +9915,12 @@ header {
   .wrag__image__section {
     padding: 10% 10% 5% 10%;
   }
+  .margin-r-30 {
+    margin-right: 0%;
+  }
+  .wrag__bg {
+    padding: 0;
+  }
 }
 @media screen and (max-width: 375px) {
   .gcm__color {
