--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -9938,7 +9938,7 @@ header {
   z-index: 999;
 }
 .dmtc__typo {
-  width: 80% !important;
+  width: 70% !important;
 }
 .dmtc__typo__section {
   display: -webkit-box;
@@ -9996,6 +9996,37 @@ header {
     left: 29%;
   }
 }
+@media screen and (max-width: 1024px) {
+  .dmtc .module--header__bg {
+    top: 20%;
+    left: 8%;
+  }
+  .dharan .el1 {
+    left: 5%;
+  }
+}
+@media screen and (max-width: 991px) {
+  .dmtc .module--header__bg {
+    top: 25%;
+    left: 3%;
+  }
+  #colorc .dmtc__color__sec {
+    padding-left: 0;
+  }
+  .dmtc__typo {
+    width: 80% !important;
+  }
+  .dmtc__mp {
+    padding: 15% 0;
+  }
+  .blocco div.dmtc__typo {
+    margin-bottom: 15%;
+    text-align: center;
+  }
+  .margin-r-10 {
+    margin-right: 10%;
+  }
+}
 @media screen and (max-width: 475px) {
   .dmtca__color {
     min-height: calc(var(--vh, 1vh) * 27) !important;
@@ -10016,6 +10047,13 @@ header {
   .blocco div figure .dmtc__end__img {
     -webkit-transform: scale(1.02) !important;
     transform: scale(1.09) !important;
+  }
+  .dmtc__mockup {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
+  }
+  .dmtc__module {
+    padding: 30% 0 20% 0 !important;
   }
 }
 :root {
