--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -10039,7 +10039,7 @@ header {
     display: block;
   }
   .dmtc__typo {
-    width: 95% !important;
+    width: 90% !important;
   }
   .blocco div.dmtc__typo {
     margin-bottom: 20%;
@@ -10054,6 +10054,13 @@ header {
   }
   .dmtc__module {
     padding: 30% 0 20% 0 !important;
+  }
+  .dmtc__color {
+    width: 80%;
+    padding-right: 0px;
+  }
+  .dmtc__color__sec {
+    text-align: center;
   }
 }
 :root {
