--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -6215,7 +6215,7 @@
     display: block;
   }
   .dmtc__typo {
-    width: 95% !important;
+    width: 90% !important;
   }
   .blocco div.dmtc__typo {
     margin-bottom: 20%;
@@ -6229,6 +6229,13 @@
   }
   .dmtc__module {
     padding: 30% 0 20% 0 !important;
+  }
+  .dmtc__color {
+    width: 80%;
+    padding-right: 0px;
+  }
+  .dmtc__color__sec {
+    text-align: center;
   }
 }
 // DMTCA End
