--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -6203,6 +6203,17 @@
   }
 }
 
+@media screen and (max-width: 776px) {
+  .dmtc .hro-img {
+    transform: translate(-50%, -50%) !important;
+    left: 50% !important;
+    top: 50% !important;
+  }
+  .dmtc__mck {
+    transform: scale(1.1) !important;
+  }
+}
+
 @media screen and (max-width: 475px) {
   .dmtca__color {
     min-height: calc(var(--vh, 1vh) * 27) !important;
