--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6980,6 +6980,9 @@ header {
   right: 42.5%;
   height: 545px;
 }
+.certvault .hro-img {
+  z-index: 999;
+}
 .mg__bottom {
   margin-bottom: 10%;
 }
@@ -7061,6 +7064,9 @@ header {
   }
   #marquee .color__red {
     font-size: 3em !important;
+  }
+  .certvault .hro-img {
+    position: absolute !important;
   }
 }
 #start h1 > div > span {
