--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2608,6 +2608,9 @@
   right: 42.5%;
   height: 545px;
 }
+.certvault .hro-img {
+  z-index: 999;
+}
 
 .mg__bottom {
   margin-bottom: 10%;
@@ -2696,6 +2699,9 @@
   }
   #marquee .color__red {
     font-size: 3em !important;
+  }
+  .certvault .hro-img {
+    position: absolute !important;
   }
 }
 
