--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -5733,6 +5733,10 @@
   padding-top: 22px;
 }
 
+.gcm .hro-img {
+  z-index: 999;
+}
+
 @media screen and (max-width: 1536px) {
   .gcm .module--header__bg {
     top: 20%;
@@ -5807,10 +5811,16 @@
 
 @media screen and (max-width: 475px) {
   .gcm .hro-img {
-    height: 300px !important;
+    height: 250px !important;
   }
   .font__pad {
     padding: 0 10px;
+  }
+  .blocco div.is-inview figure .scale__img {
+    scale: 1.05;
+  }
+  .m__p {
+    padding: 15% 0;
   }
 }
 
