--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -6559,6 +6559,12 @@ header {
 .pdtl__line-height {
   line-height: 0px;
 }
+#poster .ptdl__img_mobile {
+  display: none;
+}
+.pdtl__pb {
+  padding-bottom: 60px;
+}
 @media screen and (max-width: 1024px) {
   #marquee .pdtl {
     top: -95px;
@@ -6602,6 +6608,22 @@ header {
   }
   #marquee .pdtl__mt-0 {
     margin-top: 0 !important;
+  }
+}
+@media screen and (max-width: 475px) {
+  #poster .ptdl__img_palette {
+    display: none;
+  }
+  #poster .ptdl__img_mobile {
+    width: 90%;
+    display: block;
+    margin: 0 auto;
+  }
+  .pdtl__pb {
+    padding-bottom: 0px;
+  }
+  .pdtl__pb_mobile {
+    padding-bottom: 60px;
   }
 }
 .flx-k1 {
