--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -2109,6 +2109,10 @@
   }
 }
 // PDTL ================================
+
+.dharan .hro-img {
+  z-index: 999;
+}
 .pdtl {
   justify-content: center !important;
   margin-bottom: 0% !important;
