--- a/assets/resources/styles/less/modules/_footer.less
+++ b/assets/resources/styles/less/modules/_footer.less
@@ -432,7 +432,7 @@ flex-wrap: wrap;
 .dark-footer {
   background-color: #000 !important;
   .footer-flex{
-    border-top: 1px solid #fff;
+    border-top: 1px solid #fff !important;
   }
   .top-f h3 {
     color: #fff !important;
