--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -16533,7 +16533,7 @@ ul.product-tags li a {
   background-color: #000 !important;
 }
 .dark-footer .footer-flex {
-  border-top: 1px solid #fff;
+  border-top: 1px solid #fff !important;
 }
 .dark-footer .top-f h3 {
   color: #fff !important;
