--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -18471,7 +18471,8 @@ ul.aw-cats {
     width: 88%;
   }
   .lets .flex-row h1 {
-    font-size: 3em;
+    font-size: 3.2em;
+    padding-left: 0;
     overflow: hidden;
     -webkit-perspective: 600px;
     perspective: 600px;
@@ -18490,7 +18491,7 @@ ul.aw-cats {
     text-transform: uppercase;
     padding-left: 0%;
     letter-spacing: 2px;
-    margin-top: 21%;
+    margin-top: 5%;
   }
   .contact-form-block {
     padding-bottom: 90px;
