--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -1032,7 +1032,8 @@
     }
 
     .lets .flex-row h1 {
-        font-size: 3em;
+        font-size: 3.2em;
+        padding-left: 0;
         overflow: hidden;
         -webkit-perspective: 600px;
         perspective: 600px;
@@ -1054,7 +1055,7 @@
                 text-transform: uppercase;
                 padding-left: 0%;
                 letter-spacing: 2px;
-                margin-top: 21%;
+                margin-top: 5%;
             }
         }
     }
