--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -980,6 +980,9 @@
 .mob {
     display: none;
 }
+.dark-footer .footer-flex {
+    border-top: 0px solid #fff !important;
+}
 @media screen and (max-width:1920px){
     .lets .flex-row h1{
         font-size: 11em;   
