--- a/assets/resources/styles/less/modules/_header.less
+++ b/assets/resources/styles/less/modules/_header.less
@@ -1192,7 +1192,7 @@ header {
 		-webkit-box-align: center;
 		-ms-flex-align: center;
 		align-items: center;
-		z-index: 999;
+		z-index: 0;
 		width: 100%;
 		justify-content: space-between;
 	}
@@ -1203,5 +1203,8 @@ header {
 
 	.nav__newsletter-talk>div {
 		margin-left: 0px;
+	}
+	.site-branding, .menu-toggle, .header-widgets{
+		z-index: 1 !important;
 	}
 }
