--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -2647,7 +2647,7 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    z-index: 999;
+    z-index: 0;
     width: 100%;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -2658,6 +2658,11 @@ header {
   }
   .nav__newsletter-talk > div {
     margin-left: 0px;
+  }
+  .site-branding,
+  .menu-toggle,
+  .header-widgets {
+    z-index: 1 !important;
   }
 }
 .hero-section {
@@ -18425,6 +18430,9 @@ ul.aw-cats {
 }
 .mob {
   display: none;
+}
+.dark-footer .footer-flex {
+  border-top: 0px solid #fff !important;
 }
 @media screen and (max-width: 1920px) {
   .lets .flex-row h1 {
